--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -349,6 +349,7 @@ set(memgraph_src_files
     ${src_dir}/query/stripper.cpp
     ${src_dir}/query/backend/cpp/cypher_main_visitor.cpp
     ${src_dir}/query/backend/cpp/typed_value.cpp
+        ${src_dir}/query/backend/cpp/code_generator.cpp
 )
 # -----------------------------------------------------------------------------
 
