Add callback server implementation

--- a/tests/rpc/grpc/CMakeLists.txt
+++ b/tests/rpc/grpc/CMakeLists.txt
@@ -62,7 +62,8 @@ target_link_libraries(memgraph_grpc_proto
 foreach(_target
   memgraph_server
   memgraph_async_client
-  memgraph_async_server)
+  memgraph_async_server
+  memgraph_callback_server)
   add_executable(${_target} "${_target}.cpp")
   target_link_libraries(${_target}
     memgraph_grpc_proto
