add capnproto server

--- a/tests/rpc/grpc/CMakeLists.txt
+++ b/tests/rpc/grpc/CMakeLists.txt
@@ -64,8 +64,8 @@ foreach(_target
   memgraph_async_client
   memgraph_async_server
   memgraph_callback_server)
-  add_executable(${_target} "${_target}.cpp")
-  target_link_libraries(${_target}
+  add_executable(grpc_${_target} "${_target}.cpp")
+  target_link_libraries(grpc_${_target}
     memgraph_grpc_proto
     ${_REFLECTION}
     ${_GRPC_GRPCPP}
