--- a/libs/CMakeLists.txt
+++ b/libs/CMakeLists.txt
@@ -13,7 +13,6 @@ find_package(BZip2 1.0.6 REQUIRED)
 find_package(Threads REQUIRED)
 set(GFLAGS_NOTHREADS OFF)
 find_package(gflags REQUIRED)
-find_package(fmt 6.1.2)
 find_package(Jemalloc REQUIRED)
 find_package(ZLIB 1.2.11 REQUIRED)
 
@@ -188,6 +187,13 @@ add_external_project(mgconsole
   BUILD_COMMAND $(MAKE) mgconsole)
 
 add_custom_target(mgconsole DEPENDS mgconsole-proj)
+
+# Setup fmtlib
+set(FMT_HEADER_ONLY ON)
+FetchContent_Declare(fmtlib
+  SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/fmtlib)
+
+FetchContent_MakeAvailable(fmtlib)
 
 # Setup spdlog
 set(SPDLOG_FMT_EXTERNAL ON)
